--- a/css/main.css
+++ b/css/main.css
@@ -234,7 +234,7 @@ select.tm-select::-ms-expand { display: none; }
 
 /* https://css-tricks.com/creating-non-rectangular-headers/ */
 .tm-section-down-arrow {
-  position: absolute;
+ /* position: absolute;*/
   top: -1px;
   width: 100%;
   height: 100px;
@@ -571,4 +571,7 @@ video {
 .top-subtitle
 {
 	color: #B3A394;
+}
+p.about{
+	font-size: 0.9rem;
 }
