--- a/css/demo.css
+++ b/css/demo.css
@@ -68,8 +68,61 @@ body {
 	}
 }
 
-@media (max-width: 767px) {
+@media (min-width:501px) and (max-width: 767px) {
 	.clock-item {
-		margin: 0px 30px 30px 30px;
+		width:100px;
 	}
+	.text .type-time {
+    font-size: 18px;
+    margin-top: -10px;
+				margin-bottom:10px;
+}
+
+.text .val {
+    font-size: 18px;
+    margin-top: 10px;
+				margin-bottom:10px;
+}
+
+.clock-item .inner {
+	height: 90px;
+	padding-bottom: 100%;
+	position: relative;
+	width: 90px;
+}
+.tm-search-form-row
+{
+	width:500px;
+}
+
+}
+@media (max-width:500px){
+
+	.clock-item {
+		width:80px;
+	}
+	.text .type-time {
+    font-size: 15px;
+    margin-top: -10px;
+				margin-bottom:10px;
+				font-weight: normal;
+}
+
+.text .val {
+    font-size: 15px;
+    margin-top: 20px;
+				margin-bottom:5px;
+				font-weight: normal;
+}
+
+.clock-item .inner {
+	height: 70px;
+	padding-bottom: 100%;
+	position: relative;
+	width: 70px;
+}
+.tm-search-form-row
+{
+	width:350px;
+}
 }
