--- a/css/main.css
+++ b/css/main.css
@@ -114,7 +114,7 @@ p {
 
 .tm-top-bar.active .navbar-expand-lg .navbar-nav .nav-link { padding: 30px 35px; }
 .tm-top-bar-bg { height: 79px; }
-.tm-section { min-height: 515px; }
+/*.tm-section { min-height: 515px; }*/
 
 .tm-section-pad {
 	padding-top: 80px;
@@ -583,6 +583,19 @@ video {
 {
 	color: #B3A394;
 }
-p.about{
+p.darker{
 	font-size: 0.9rem;
+	color: rgba(51, 51, 51, 0.89);;
+}
+
+p.lighter{
+	font-size: 0.9rem;
+}
+.storyimage{
+	max-width:150px;
+	vertical-align:sub;
+}
+.maincontainer {
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
